(library
 (name bonsai_web_ui_auto_generated)
 (public_name bonsai_web_components.web_ui_auto_generated)
 (preprocess
  (pps bonsai.ppx_bonsai ppx_css ppx_jane))
 (libraries bonsai bonsai.extra bonsai_web bonsai_web_ui_form
   bonsai_web.ui_form_view core virtual_dom.css_gen ordinal_abbreviation
   sexp_grammar sexplib0 virtual_dom.input_widgets)
 (flags :standard -alert -private_bonsai_view_library))
