(library
 (name bonsai_web_ui_reorderable_list)
 (public_name bonsai_web_components.web_ui_reorderable_list)
 (libraries bonsai_web bonsai_web_ui_drag_and_drop
   bonsai_web_ui_element_size_hooks core virtual_dom.css_gen incr_map
   core_kernel.reversed_list bonsai_concrete.ui_incr)
 (preprocess
  (pps js_of_ocaml-ppx ppx_jane ppx_pattern_bind bonsai.ppx_bonsai)))
