(executables
 (modes byte exe)
 (names bonsai_form_example)
 (libraries bonsai_form_experimental bonsai_web core virtual_dom.layout)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets jane-web-style.css)
 (deps %{workspace_root}/lib/jane_web_style/src/css/style-4.css)
 (action
  (bash "cat %{deps} > %{targets}")))

(alias
 (name DEFAULT)
 (deps jane-web-style.css))
